--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "advent-of-code-data>=2.0.4",
+    "numpy>=2.1.3",
     "typer>=0.14.0",
 ]
