--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.14"
 dependencies = [
     "advent-of-code-data>=2.1.0",
     "numpy>=2.3.5",
+    "scipy>=1.16.3",
     "typer>=0.20.0",
 ]
